fixed overflow

--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -87,9 +87,13 @@ video {
     vertical-align: baseline;
 }
 
-body,
-html {
-    overflow-x: hidden;
+
+@media(max-width:500px) {
+
+    body,
+    html {
+        overflow-x: hidden;
+    }
 }
 
 /* HTML5 display-role reset for older browsers */
